
Revision history for Net::DNS                                     -*-text-*-
=============================

*** 0.57 NOT RELEASE YET


Fix rt.cpan.org 18897

   Zero-length rdata in TXT fixed (Acknowledgements to Roy Arends)

Fix rt.cpan.org 18785

   SPF would not work unless the TXT RR was not loaded first. No
   wonder, SPF fully inherits TXT and loading of TXT.pm is therefore a
   prerequisit.


Fix rt.cpan.org 18713

    Net::DNS::Resolver now deals gracefully with persistent sockets
    that got disconnected. It will first try to connect again to the
    socket and if that fails it will try to connect to the next
    available nameserver. tcp_timeout() is the parameter that
    determines how long to wait during a reconnect.

Fix rt.cpan.org 18268

     Added reference to RFC in croak message for label length > 63 in
     dn_comp().

Fix rt.cpan.org  18113

    The inet6 tests contained another bug when online-tests were disabled.
    Klaus Heinz discovered and provided a patch.

*** 0.57 February 24, 2006

Fix rt.cpan.org 17783

    The inet6 tests do not skip enough tests when ipv6 is not available.
    I did not catch this in my setup since IPv6 is available on all my
    machines. 

    Since this breaks automatic CPAN installs a new release is
    reasonable.


*** 0.56 February 20, 2006

Fix rt.cpan.org 17694
 
   Net::DNS::typesbyval() now confesses on undefined
   args. Acknowledgements to Dean Serenevy.

Feature Implemented SPF (typecode 99).

   The class completely inherits from Net::DNS::RR::TXT (the easiest 
   RR to implement ever).

Feature added rrsort() function.
   Feature was requested by Eric Hall in rt.cpan.org 13392

   This was a little tricky as I think that the sort functions are in
   fact RR specific class attributes that should be accessed through
   class methods. This is difficult to implement. I do think I found a
   fairly clean manner. It does require a global variable in Net::DNS